# genal

./: .RData  .gitignore  .readthedocs.yaml  GENAL_MR.R  GENAL_MR_script.R  GENAL_multiMR_outcomes.R  GENAL_multiMR_script.R  GENAL_tovcf.R  README.md  REVIEW_REPORT.md  genal.readthedocs.yaml  genal_env.yml  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
GENAL/: GENO.py  MR.py  MR_tools.py  PRS.py  __init__.py  clump.py  config.py  extract_prs.py  lift.py  proxy.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: api.doctree  environment.pickle  genal.doctree  index.doctree  introduction.doctree  modules.doctree
docs/_build/doctrees/source/: genal.doctree  modules.doctree
docs/_build/html/: .buildinfo  api.html  genal.html  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: introduction.rst.txt
docs/_build/html/_sources/source/: genal.rst.txt
docs/_build/html/source/: genal.html  modules.html
docs/source/: api.md  api.rst  concepts.md  conf.py  faq.md  genal.rst  index.md  index.rst  introduction.md  introduction.rst  methods.md  modules.rst  setup.md  workflows.md
genal/: GENO.py  Geno.py  MR.py  MR_tools.py  MRpresso.py  __init__.py  association.py  clump.py  colocalization.py  constants.py  extract_prs.py  genes.py  geno_tools.py  lift.py  models.py  plots.py  proxy.py  snp_query.py  tools.py
genal/.ipynb_checkpoints/: Geno-checkpoint.py  MR-checkpoint.py  MRpresso-checkpoint.py  __init__-checkpoint.py  association-checkpoint.py  geno_tools-checkpoint.py  tools-checkpoint.py
tests/: .gitignore  README.md  conftest.py  generate_baselines.py  gwas_examples.py  pytest.ini  run_suite.py
tests/baselines/: README.md  colocalization_baseline_v1.json  liftover_baseline_v1.json  mr_baseline_v1.json  mrpresso_baseline_v1.json  preprocessing_baseline_v1.json  prs_baseline_v1.json
tests/integration/: test_association.py  test_baselines.py  test_clump.py  test_extract_prs.py  test_full_pipeline.py  test_geno_methods.py  test_geno_preprocess.py  test_gwas_error_injection.py  test_gwas_examples.py  test_mr_ground_truth.py  test_mr_stochastic_methods.py  test_mrpresso.py  test_plink_optional.py
tests/reports/: README.md
tests/unit/: test_association.py  test_colocalization.py  test_genes.py  test_geno_tools.py  test_lift.py  test_mr.py  test_mr_tools.py  test_package_init.py  test_proxy.py  test_query_outcome.py  test_snp_query.py  test_tools.py
