[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genal-python"  # Updated name for PyPI
version = "1.3.4"
authors = [{name = "Cyprien Rivier", email = "riviercyprien@gmail.com"}]
description = "A python toolkit for polygenic risk scoring and mendelian randomization."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

# Dependencies section
dependencies = [
"aiohttp==3.9.5",
"nest_asyncio==1.5.5",
"numpy>=1.24.4, <2.0",
"pandas>=2.0.3",
"plotnine==0.12.3",
"psutil==5.9.1",
"pyliftover==0.4",
"scikit_learn>=1.3.0",
"scipy>=1.10.1, <1.11",
"statsmodels==0.14.0",
"tqdm==4.66.1",
"wget==3.2",
"fastparquet>=2024.2.0"
]

[tool.setuptools.package-dir]
genal = "genal/"


[project.urls]
Home = "https://github.com/CypRiv/genal"

[tool.flit.module]
name = "genal" 