[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genal-python"  # Updated name for PyPI
version = "1.5.1"
authors = [{name = "Cyprien Rivier", email = "riviercyprien@gmail.com"}]
description = "A python toolkit for polygenic risk scoring and mendelian randomization."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

# Dependencies section
dependencies = [
"aiohttp>=3.7",
"nest_asyncio>=1.5",
"numpy>=1.17.3",
"pandas>=1.0",
"plotnine>=0.9",
"psutil>=5.0",
"requests>=2.0",
"pyliftover>=0.4",
"scikit_learn>=0.24",
"scipy>=1.7,<1.13",
"statsmodels>=0.13,<0.15",
"tqdm>=4.38",
"wget>=3.0",
"fastparquet>=0.4",
"pyarrow>=3.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-xdist",
]

[tool.setuptools.package-dir]
genal = "genal/"


[project.urls]
Home = "https://github.com/CypRiv/genal"

[tool.flit.module]
name = "genal" 
