[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genal-python"  # Updated name for PyPI
version = "1.6"
authors = [{name = "Cyprien Rivier", email = "riviercyprien@gmail.com"}]
description = "A python toolkit for polygenic risk scoring and mendelian randomization."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

# Dependencies section
dependencies = [
"aiohttp>=3.9",
"matplotlib>=3.7",
"nest-asyncio>=1.6",
"numpy>=1.24",
"pandas>=2.0",
"plotnine>=0.12",
"psutil>=5.9",
"pyarrow>=14",
"pyliftover>=0.4",
"requests>=2.31",
"scikit-learn>=1.3",
"scipy>=1.11",
"statsmodels>=0.14",
"tqdm>=4.66"
]

[project.optional-dependencies]
test = [
  "pytest>=8.4",
  "pytest-cov>=7.0",
  "pytest-xdist>=3.8",
]
docs = [
  "myst-parser>=3.0",
  "sphinx>=7.4",
  "sphinx-rtd-theme>=3.0",
]

[tool.setuptools.package-dir]
genal = "genal/"


[project.urls]
Home = "https://github.com/CypRiv/genal"

[tool.flit.module]
name = "genal" 
